# image_baker

./: .gitignore  Cargo.toml  README.md  SHADER_GUIDE.md  build.rs
.github/workflows/: release.yml
shaders/bc5_xy_normal/: config.toml  shader.wgsl
shaders/cod_fuse_color_spec/: config.toml  shader.wgsl
shaders/cod_fused_cs/: config.toml  shader.wgsl
shaders/cod_mw2r_blue/: config.toml  shader.wgsl
shaders/cod_nog/: config.toml  shader.wgsl
shaders/cod_pack_nog/: config.toml  shader.wgsl
shaders/cod_spec_gloss/: config.toml  shader.wgsl
shaders/cod_ww2_green/: config.toml  shader.wgsl
shaders/cod_ww2_split_cs/: config.toml  shader.wgsl
shaders/cod_xy_normal/: config.toml  shader.wgsl
shaders/deathloop_packed/: config.toml  shader.wgsl
shaders/detail_map_merge/: config.toml  shader.wgsl
shaders/invert/: config.toml  shader.wgsl
shaders/invert_green/: config.toml  shader.wgsl
shaders/merge_rgba/: config.toml  shader.wgsl
shaders/pbr_to_csg/: config.toml  shader.wgsl
shaders/signed_distance_field/: config.toml  shader.wgsl
shaders/split_all_channels/: config.toml  shader.wgsl
shaders/split_color_alpha/: config.toml  shader.wgsl
shaders/texture_baker/: config.toml  shader.wgsl
src/: app.rs  app_state.rs  controller.rs  core_logic.rs  fonts.rs  logger.rs  main.rs  messages.rs  panic_hook.rs  porter_image.rs  settings.rs  status.rs  system.rs  theme.rs  widget_helpers.rs
src/components/: about.rs  baker.rs  baker_layout.rs  detail_mapper.rs  droppable_image_slot.rs  image_operations.rs  mod.rs
src/shaders/: fullscreen_quad_vertex.wgsl
(+7 files in other folders)
