[package]
name = "image_baker"
version = "0.1.0"
edition = "2024"
authors = ["echo000"]
description = "A tool for merging texture maps into baked output textures"
license = "GPL-3.0"
repository = "https://github.com/echo000/image_baker"
keywords = ["texture", "image", "graphics", "baking"]
categories = ["graphics", "multimedia::images"]

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
porter-threads = { git = "https://github.com/dtzxporter/porter-lib" }
porter-utils = { git = "https://github.com/dtzxporter/porter-lib" }
image = { version = "0.25.1", default-features = false, features = ["png", "tiff", "tga", "dds", "ico", "rayon"] }
rayon = "1.10.0"
bincode = "2.0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "6.0"
wgpu = { version = "26.0", default-features = false, features = ["wgsl", "dx12", "vulkan"] }
iced = { version = "0.14.0-dev", default-features = false, features = [
    "image-without-codecs",
    "canvas",
    "advanced",
    "wgpu-without-backends",
] }
rfd = { version = "0.15", default-features = false, features = ["gtk3", "common-controls-v6"] }

[build-dependencies]
porter-build = { git = "https://github.com/echo000/porter-lib" }

[patch.crates-io]
iced = { git = "https://github.com/dtzxporter/iced", rev = "d993b7da9809fe6c19ade6c0e776787c65d3b72e" }
